--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#our-works">আমাদের কাজসমূহ</a>
+              <a class="nav-link" href="./portfolio.html">আমাদের কাজসমূহ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./web-hosting.html">ওয়েব হোস্টিং</a>
@@ -155,16 +155,19 @@
                 আমাদের সাথে
               </h1>
               <p>
-                আমরা বাংলায় ওয়েব ডেডলপমেন্ট নিয়ে কাজ করতে গিয়ে প্রথম যে
-                সমস্যাটার মুখোমুখি হই, সেটা হলো, বাংলা ডেমো টেক্সট। ইংরেজির জন্য
-                lorem ipsum তো আছে । বাংলার জন্য কি আছে? সেই ধারনা থেকেই বাংলা
-                ডেমো টেক্সট তৈরীর চেষ্টা। HTML এর প্রয়োজনীয় প্রায় সব ফরম্যাটেই
-                বাংলা ডেমো টেক্সট তুলে ধরা হয়েছে। আশা করছি, এরি ক্ষুদ্র
-                প্রচেষ্টা আপনাদের কাজে আসবে।
-              </p>
-              <p class="our-about-text">
-                এবং এইভাবে আমরা <span>CODE</span>NEXT <span>I</span>T জন্মগ্রহণ
-                করি।
+                কোডনেক্সট আইটি, আমাদের এই পথচলার শুরু হয় ২০২১ সালের ১লা মার্চ।
+                যাত্রার শুরু থেকেই আমরা প্রতিজ্ঞাবদ্ধ ছিলাম ডিজিটাল বাংলাদেশ
+                বিনির্মানে বিশেষ ভূমিকা রাখার উদ্দেশ্যে। পাবনা জেলার
+                প্রাণকেন্দ্র এ অবস্থিত প্রতিষ্ঠানটি একদল তরুন-তরুণী ও
+                শিক্ষার্থীদের নিয়ে যুগের সাথে তাল মিলিয়ে এগিয়ে চলছে আইটি
+                ক্যারিয়ার ও ফ্রিল্যান্সিং ক্যারিয়ারের মাধ্যমে দক্ষ জনশক্তি
+                তৈরিতে। আধুনিক প্রযুক্তির সাথে তাল মিলিয়ে নিজেকে আপডেটেড রাখতে
+                আপনার পাশে রয়েছে কোডনেক্সট আইটি।
+                <br />আমরা সর্বদা চেষ্টা করি, আমাদের গ্রাহক, প্রশিক্ষক,
+                ইন্টার্ণ, ট্রেইনি সকলকে যথাযথ মূল্যায়ন ও সহযোগিতা করার।
+                <br /><br />দক্ষতা ও সৃজনশীলতার সমন্বয়ে বিগত দুই বছর কোডনেক্সট
+                আইটি নিরলস ভাবে কাজ করে যাচ্ছে আইটি সেক্টরে বিশেষ ভূমিকা রাখার
+                উদেশ্যে।
               </p>
             </div>
           </div>
@@ -188,16 +191,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/ismail-hossain-md-profile.png" />
               </div>
               <div class="teams-text">
-<<<<<<< HEAD
                 <h3>মোঃ ইসমাইল হোসেন</h3>
                 <p>প্রতিষ্ঠাতা ও এম.ডি</p>
-=======
-                <h3>মোঃ ইসমাইল হোসাইন</h3>
-                <p>Founder & MD</p>
->>>>>>> main
               </div>
               <div class="teams-social">
                 <a href="https://www.facebook.com/ismailhossainnaiem">
@@ -215,7 +213,7 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/teams/imtiaz-ahmed-ceo-profile.jpg" />
+                <img src="./img/teams/imtiaz-ahmed-ceo-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>ইমতিয়াজ আহমেদ</h3>
@@ -237,11 +235,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/anika-tabassum-cao-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>আনিকা তাবাসসুম</h3>
-                <p>Cheif Admin Officer</p>
+                <p>চীফ এডমিন অফিসার</p>
               </div>
               <div class="teams-social">
                 <a href="https://www.facebook.com/annisamth">
@@ -259,21 +257,25 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/rahat-web-dev-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>মোহাম্মদ রাহাত</h3>
-                <p>Sr. Web Developer</p>
+                <p>সিনিয়র ওয়েব ডেভেলপার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/profile.php?id=100055058377971">
+                <a
+                  href="https://www.facebook.com/profile.php?id=100055058377971"
+                >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/rahat-cnits-82177a258/
-                ">
+                <a
+                  href="https://www.linkedin.com/in/rahat-cnits-82177a258/
+                "
+                >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
               </div>
@@ -285,11 +287,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/robi-web-design-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>মোঃ রবিউল ইসলাম</h3>
-                <p>Web Designer</p>
+                <p>ওয়েব ডিজাইনার</p>
               </div>
               <div class="teams-social">
                 <a href="#">
@@ -307,14 +309,16 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/tamim-ui-ux-design-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>এদিন আহমেদ তামিম</h3>
-                <p>UI/UX Designer</p>
+                <p>UI/UX ডিজাইনার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/profile.php?id=100013801309542">
+                <a
+                  href="https://www.facebook.com/profile.php?id=100013801309542"
+                >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -329,11 +333,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/rahul-ui-ux-design-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>মিরাজুল ইসলাম</h3>
-                <p>UI/UX Designer</p>
+                <p>UI/UX ডিজাইনার</p>
               </div>
               <div class="teams-social">
                 <a href="https://www.facebook.com/mi.rahul.520">
@@ -351,11 +355,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/prity-g-design-profile.png" />
               </div>
               <div class="teams-text">
                 <h3>মৌমিতা আফরোজ প্রিতি</h3>
-                <p>Graphics Designer</p>
+                <p>গ্রাফিক্স ডিজাইনার</p>
               </div>
               <div class="teams-social">
                 <a href="https://www.facebook.com/sabihatabassum.orthy">
