--- a/web-hosting.html
+++ b/web-hosting.html
@@ -302,9 +302,7 @@
                         <img src="./icons/divider.png">
                         <h2>Migration এ সাহায্য প্রয়োজন?</h2>
                         <h4>ফ্রি তে আপনার সাইট Migration করিয়ে নিন</h4>
-                        <p>Getting started with CodeNext IT is always easier! Simply ask to help you migrate your
-                            existing
-                            websites to us, we will do it for you.</p>
+                        <p>কোডনেক্সট আইটির সাথে শুরু করা সর্বদাই আপনার জন্য সহজ একটি বিষয়। আপনার ওইয়েবসাইট টি মাইগ্রেশন করতে আমাদেরকে বলুন, আমরা আপনার কাজটি করে দেবো অত্যন্ত যত্ন সহকারে।</p>
                         <p class="migration-text"><img src="./icons/hosting-lnd-page/check-solid 1.png">Migration from
                             any compatible server.</p>
                         <p class="migration-text"><img src="./icons/hosting-lnd-page/check-solid 1.png">Skilled Sys
