--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,7 @@
               <a class="nav-link" href="#our-works">আমাদের কাজসমূহ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./web-hosting.html"
-                >ওয়েব হোস্টিং</a
-              >
+              <a class="nav-link" href="./web-hosting.html">ওয়েব হোস্টিং</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">আমাদের সম্পর্কে</a>
@@ -371,8 +369,6 @@
       </div>
     </section>
     <!-- Copyright Footer Section Start -->
-
-    <br /><br />
 
     <!-- Custom Js -->
     <script src="./js/customer-logo-carousel.js"></script>
