--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                   <img src="./img/gd-icon.png" alt="" class="mb-3" />
                   <h5>গ্রাফিক্স ডিজাইন</h5>
                   <div class="quick-service-border-circle">
-                    <div class="quick-service-border-circle-1">                     
-                    </div>
+                    <div class="quick-service-border-circle-1"></div>
                   </div>
                 </div>
               </div>
@@ -136,8 +135,7 @@
                   <img src="./img/software-icon.png" alt="" class="mb-3" />
                   <h5>সফটওয়্যার</h5>
                   <div class="quick-service-border-circle">
-                    <div class="quick-service-border-circle-1">                     
-                    </div>
+                    <div class="quick-service-border-circle-1"></div>
                   </div>
                 </div>
               </div>
@@ -146,8 +144,7 @@
                   <img src="./img/website-icon.png" alt="" class="mb-3" />
                   <h5>ওয়েবসাইট</h5>
                   <div class="quick-service-border-circle">
-                    <div class="quick-service-border-circle-1">                     
-                    </div>
+                    <div class="quick-service-border-circle-1"></div>
                   </div>
                 </div>
               </div>
@@ -156,8 +153,7 @@
                   <img src="./img/ui-ux-icon.png" alt="" class="mb-3" />
                   <h5>UI/UX ডিজাইন</h5>
                   <div class="quick-service-border-circle">
-                    <div class="quick-service-border-circle-1">                     
-                    </div>
+                    <div class="quick-service-border-circle-1"></div>
                   </div>
                 </div>
               </div>
@@ -166,8 +162,7 @@
                   <img src="./img/Course-icon.png" alt="" class="mb-3" />
                   <h5>কোর্স/ট্রেনিং</h5>
                   <div class="quick-service-border-circle">
-                    <div class="quick-service-border-circle-1">                     
-                    </div>
+                    <div class="quick-service-border-circle-1"></div>
                   </div>
                 </div>
               </div>
@@ -188,6 +183,10 @@
                 <div class="about-info mt-5 pt-5 mb-5">
                   <h2 class="pb-3">আমাদের সম্পর্কে কিছু কথা...</h2>
                   <p class="pb-4">
+                    জন্ম লগ্ন থেকেই আমাদের মূল ভিশন ও মিশন হলো আইটিতে বিশেষ
+                    অবদান রাখা <br />
+                    ও আইটি ক্যারিয়ার গঠনে সহায়তা করে দক্ষ জনশক্তি তৈরিতে অবদান
+                    রাখা। <br /><br />
                     দক্ষতা ও সৃজনশীলতার সমন্বয়ে বিগত দুই বছর কোডনেক্সট আইটি
                     নিরলস ভাবে<br />
                     কাজ করে যাচ্ছে আইটি সেক্টরে বিশেষ ভূমিকা রাখার উদেশ্যে।<br />
@@ -249,14 +248,12 @@
               <h4 class="ps-4">ওয়েবসাইট<br />ডেভেলপমেন্ট</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -268,14 +265,12 @@
               <h4 class="ps-4">সফটওয়্যার<br />ডেভেলপমেন্ট</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -287,14 +282,12 @@
               <h4 class="ps-4">অ্যাপস<br />ডেভেলপমেন্ট</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -306,14 +299,12 @@
               <h4 class="ps-4">গ্রাফিক্স<br />ডিজাইন</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -327,14 +318,12 @@
               <h4 class="ps-4">UI/UX<br />ডিজাইন</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -353,14 +342,12 @@
                 </h4>
                 <div class="service-border-circle-top">
                   <div class="service-border-circle-top-1">
-                    <div class="service-border-circle-top-2">
-                    </div>
+                    <div class="service-border-circle-top-2"></div>
                   </div>
                 </div>
                 <div class="service-border-circle">
                   <div class="service-border-circle-1">
-                    <div class="service-border-circle-2">
-                    </div>
+                    <div class="service-border-circle-2"></div>
                   </div>
                 </div>
               </div>
@@ -372,14 +359,12 @@
               <h4 class="ps-4" style="padding-bottom: 32px">কোর্স/ ট্রেনিং</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -394,14 +379,12 @@
               <h4 class="ps-4">সোস্যাল মিডিয়া<br />ম্যানেজমেন্ট</h4>
               <div class="service-border-circle-top">
                 <div class="service-border-circle-top-1">
-                  <div class="service-border-circle-top-2">
-                  </div>
+                  <div class="service-border-circle-top-2"></div>
                 </div>
               </div>
               <div class="service-border-circle">
                 <div class="service-border-circle-1">
-                  <div class="service-border-circle-2">
-                  </div>
+                  <div class="service-border-circle-2"></div>
                 </div>
               </div>
             </div>
@@ -838,11 +821,20 @@
               <div class="slide">
                 <img src="./img/apad-logo.png" />
               </div>
-              <!-- <div class="slide">
-                            <img src="./img/srbdc-logo.png">
-                        </div> -->
               <div class="slide">
                 <img src="./img/cis-bd-logo.png" />
+              </div>
+              <div class="slide">
+                <img src="./img/skyview-logo.png" />
+              </div>
+              <div class="slide">
+                <img src="./img/zeeroow-logo.png" />
+              </div>
+              <div class="slide">
+                <img src="./img/grow-pins-logo.png" />
+              </div>
+              <div class="slide">
+                <img src="./img/puzzle-bazaar-logo-01.png" />
               </div>
             </div>
           </div>
@@ -942,8 +934,6 @@
       </div>
     </section>
     <!-- Copyright Footer Section Start -->
-
-    <br /><br />
 
     <!-- Custom Js -->
     <script src="./js/customer-logo-carousel.js"></script>
