--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="row align-items-center">
-              <div class="col-sm col-md text-center mb-4">
+              <div class="col-lg col-md text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/gd-icon.png" alt="" class="mb-3" />
                   <h5>গ্রাফিক্স ডিজাইন</h5>
@@ -127,7 +127,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm text-center mb-4">
+              <div class="col-lg text-center mb-4">
                 <div class="quick-service-card">
                   <!-- <a href="https://www.codenextit.com/">
                                     <span class="link"></span>
@@ -139,7 +139,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm text-center mb-4">
+              <div class="col-lg text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/website-icon.png" alt="" class="mb-3" />
                   <h5>ওয়েবসাইট</h5>
@@ -148,7 +148,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm text-center mb-4">
+              <div class="col-lg text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/ui-ux-icon.png" alt="" class="mb-3" />
                   <h5>UI/UX ডিজাইন</h5>
@@ -157,7 +157,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm text-center mb-4">
+              <div class="col-lg text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/Course-icon.png" alt="" class="mb-3" />
                   <h5>কোর্স/ট্রেনিং</h5>
@@ -242,7 +242,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./img/website-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">ওয়েবসাইট<br />ডেভেলপমেন্ট</h4>
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./img/software-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">সফটওয়্যার<br />ডেভেলপমেন্ট</h4>
@@ -276,7 +276,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./img/software-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">অ্যাপস<br />ডেভেলপমেন্ট</h4>
@@ -293,7 +293,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./img/gd-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">গ্রাফিক্স<br />ডিজাইন</h4>
@@ -312,7 +312,7 @@
         </div>
 
         <div class="row pt-md-5">
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./icons/ui-ux-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">UI/UX<br />ডিজাইন</h4>
@@ -328,7 +328,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <a class="service-card-link" href="./web-hosting.html">
               <div class="service-card">
                 <img
@@ -353,7 +353,7 @@
               </div>
             </a>
           </div>
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img src="./icons/Course-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4" style="padding-bottom: 32px">কোর্স/ ট্রেনিং</h4>
@@ -369,7 +369,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3">
+          <div class="col-lg-3">
             <div class="service-card">
               <img
                 src="./icons/social-manage-icon.png"
